Add cache clear via popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -30,7 +30,14 @@
         <h2>Source Code</h2>
         <a href="#" class="source-link">Coming soon...</a>
       </div>
+
+      <div class="cache-section">
+        <h2>Cache</h2>
+        <button id="clearCache" class="clear-cache-btn">Clear Cache</button>
+        <div id="cacheStatus" class="cache-status"></div>
+      </div>
     </div>
   </div>
+  <script src="popup.js"></script>
 </body>
 </html> 
