--- a/src/popup.html
+++ b/src/popup.html
@@ -32,6 +32,10 @@
         <button id="clearCache" class="clear-cache-btn">Очистить кэш</button>
         <div id="cacheStatus" class="cache-status"></div>
       </div>
+
+      <div class="star-request">
+        Поставьте проекту звездочку на GitHub если он вам полезен <3
+      </div>
     </div>
   </div>
   <script src="popup.js"></script>
